<resources>
    <string name="app_name">The Base Cafe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pay_logo">Pay_Logo</string>
    <string name="checkout">Checkout</string>
    <string name="cart">CART</string>
    <string name="pay">Pay</string>
    <string name="back_to_cart">Back to Cart</string>
    <string name="choose_mode_of_payment">CHOOSE MODE OF PAYMENT</string>
    <string name="your_order_is">YOUR ORDER IS</string>
    <string name="pending">PENDING</string>
    <string name="cooking">COOKING</string>
    <string name="on_its_way">ON ITS WAY</string>
    <string name="here">HERE!</string>
    <string name="drinks_menu">DRINKS MENU</string>
    <string name="total_ghs">TOTAL: GHS</string>
    <string name="_0_00">0.00</string>
    <string name="cart1">Cart</string>
    <string name="pay1">pay</string>
    <string name="background">Background</string>
    <string name="track_order1">Track Order</string>
    <string name="track_order">Track Order</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logo">Logo</string>
    <string name="to">TO</string>
    <string name="alfred_georgia_room_68">ALFRED@GEORGIA ROOM 68</string>
</resources>