<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/scroll_back">

    <Button
        android:id="@+id/cart_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:text="@string/cart1"
        app:layout_constraintBaseline_toBaselineOf="@+id/pay_btn"
        app:layout_constraintEnd_toStartOf="@+id/pay_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/pay_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="237dp"
        android:layout_marginEnd="8dp"
        android:text="@string/pay1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cart_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/background"
        app:layout_constraintBottom_toBottomOf="@+id/cart_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/thebasecafe" />

    <Button
        android:id="@+id/track_order_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="16dp"
        android:text="@string/track_order"
        app:layout_constraintBottom_toTopOf="@+id/cart_btn"
        app:layout_constraintEnd_toEndOf="@+id/pay_btn"
        app:layout_constraintStart_toStartOf="@+id/cart_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>




